--- a/mapa.html
+++ b/mapa.html
@@ -25,12 +25,55 @@
 </head>
 <body>
 
-<div class="header">
-  <h1>Mapa prodavaca</h1>
-  <a href="index.html">Početna</a>
-  <a href="prodavci.html">Svi prodavci</a>
-  <a href="registracija-prodavca.html">Postani prodavac</a>
-</div>
+<header>
+  <nav>
+    <div class="logo">LokalniPlodovi</div>
+    <ul>
+      <li><a href="index.html">Početna</a></li>
+      <li><a href="Prodavci.html">Svi prodavci</a></li>
+      <li><a href="mapa.html">Mapa</a></li>
+      <li><a href="#">Chat</a></li>
+
+      <!-- Prikazuje se SAMO ako je ulogovan -->
+      <li id="moj-profil-li" style="display:none;">
+        <a href="moj-profil.html">Moj profil</a>
+      </li>
+      <li id="odjavi-se-li" style="display:none;">
+        <a href="#" onclick="odjaviSe()">Odjavi se</a>
+      </li>
+
+      <!-- Prikazuje se SAMO ako NIJE ulogovan -->
+      <li id="prijavi-se-li">
+        <a href="login.html">Prijavi se</a>
+      </li>
+      <li id="postani-prodavac-li">
+        <a href="registracija-prodavca.html">Postani prodavac</a>
+      </li>
+    </ul>
+  </nav>
+</header>
+
+<script>
+  // Proveri da li je korisnik ulogovan
+  const korisnik = localStorage.getItem('trenutniKorisnik');
+
+  if (korisnik) {
+    document.getElementById('moj-profil-li').style.display = 'list-item';
+    document.getElementById('odjavi-se-li').style.display = 'list-item';
+    document.getElementById('prijavi-se-li').style.display = 'none';
+    document.getElementById('postani-prodavac-li').style.display = 'none';
+  } else {
+    document.getElementById('moj-profil-li').style.display = 'none';
+    document.getElementById('odjavi-se-li').style.display = 'none';
+    document.getElementById('prijavi-se-li').style.display = 'list-item';
+    document.getElementById('postani-prodavac-li').style.display = 'list-item';
+  }
+
+  function odjaviSe() {
+    localStorage.removeItem('trenutniKorisnik');
+    window.location.href = 'index.html';
+  }
+</script>
 
 <div id="map"></div>
 
