--- a/proizvodjaci/blitva.html
+++ b/proizvodjaci/blitva.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Proizvođači [PROIZVOD] – LokalniPlodovi</title>
+  <title>Proizvođači blitva – LokalniPlodovi</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
     :root {
@@ -90,31 +90,31 @@
   <nav>
     <div class="logo">LokalniPlodovi</div>
     <ul>
-      <li><a href="index.html">Početna</a></li>
-      <li><a href="prodavci.html">Svi prodavci</a></li>
-      <li><a href="mapa.html">Mapa</a></li>
-      <li><a href="#">Chat</a></li>
+      <li><a href="/">Početna</a></li>
+      <li><a href="/prodavci">Svi prodavci</a></li>
+      <li><a href="/mapa">Mapa</a></li>
+      <li><a href="/chat">Chat</a></li>
 
       <li id="moj-profil-li" style="display:none;">
-        <a href="moj-profil.html">Moj profil</a>
+        <a href="/moj-profil">Moj profil</a>
       </li>
       <li id="odjavi-se-li" style="display:none;">
         <a href="#" onclick="odjaviSe()">Odjavi se</a>
       </li>
 
       <li id="prijavi-se-li">
-        <a href="login.html">Prijavi se</a>
+        <a href="/login">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="prijava-prodavca.html">Postani prodavac</a>
+        <a href="/prijava-prodavca">Postani prodavac</a>
       </li>
     </ul>
   </nav>
 </header>
 
 <div class="container">
-  <h1 id="naslov">Proizvođači</h1>
-  <p>Ova stranica je za sada prazna. Kasnije će ovde biti lista proizvođača ovog proizvoda, njihovi profili, proizvodi i kontakt.</p>
+  <h1>Proizvođači blitva</h1>
+  <p>Ova stranica je za sada prazna. Kasnije će ovde biti lista proizvođača blitva, njihovi profili, proizvodi i kontakt.</p>
 </div>
 
 <footer>
@@ -126,7 +126,7 @@
 </footer>
 
 <script>
-  // Logika za prikazivanje/sakrivanje opcija u header-u
+  // Logika za prikazivanje/sakrivanje opcija
   const korisnik = localStorage.getItem('trenutniKorisnik');
 
   if (korisnik) {
@@ -143,15 +143,8 @@
 
   function odjaviSe() {
     localStorage.removeItem('trenutniKorisnik');
-    window.location.href = 'index.html';
+    window.location.href = '/';
   }
-
-  // Automatski naslov na osnovu imena fajla
-  const fajlIme = window.location.pathname.split('/').pop().replace('.html', '');
-  const proizvod = fajlIme.replace('proizvodjaci-', '').replace(/-/g, ' ');
-  const prviVeliki = proizvod.charAt(0).toUpperCase() + proizvod.slice(1);
-  document.getElementById('naslov').textContent = `Proizvođači ${prviVeliki}`;
-  document.title = `Proizvođači ${prviVeliki} – LokalniPlodovi`;
 </script>
 
 </body>
