--- a/index.html
+++ b/index.html
@@ -156,54 +156,51 @@
 <body>
 
 <header>
-<nav>
-  <div class="logo">LokalniPlodovi</div>
-  <ul>
-    <li><a href="index.html">Početna</a></li>
-    <li><a href="Prodavci.html">Svi prodavci</a></li>
-    <li><a href="#">Mapa</a></li>
-    <li><a href="#">Chat</a></li>
+  <nav>
+    <div class="logo">LokalniPlodovi</div>
+    <ul>
+      <li><a href="/">Početna</a></li>
+      <li><a href="/prodavci">Svi prodavci</a></li>
+      <li><a href="/mapa">Mapa</a></li>
+      <li><a href="/chat">Chat</a></li>
 
-    <!-- Ovo se pokazuje SAMO ako je korisnik ulogovan -->
-    <li id="moj-profil-li" style="display:none;">
-      <a href="moj-profil.html">Moj profil</a>
-    </li>
-    <li id="odjavi-se-li" style="display:none;">
-      <a href="#" onclick="odjaviSe()">Odjavi se</a>
-    </li>
+      <li id="moj-profil-li" style="display:none;">
+        <a href="/moj-profil">Moj profil</a>
+      </li>
+      <li id="odjavi-se-li" style="display:none;">
+        <a href="#" onclick="odjaviSe()">Odjavi se</a>
+      </li>
 
-    <!-- Ovo se pokazuje SAMO ako NIJE ulogovan -->
-    <li id="prijavi-se-li">
-      <a href="login.html">Prijavi se</a>
-    </li>
-    <li id="postani-prodavac-li">
-      <a href="prijava-prodavca.html">Postani prodavac</a>
-    </li>
-  </ul>
-</nav>
+      <li id="prijavi-se-li">
+        <a href="/login">Prijavi se</a>
+      </li>
+      <li id="postani-prodavac-li">
+        <a href="/prijava-prodavca">Postani prodavac</a>
+      </li>
+    </ul>
+  </nav>
+</header>
 
 <script>
-  // Proveri da li je korisnik ulogovan
   const korisnik = localStorage.getItem('trenutniKorisnik');
 
   if (korisnik) {
-    document.getElementById('moj-profil-li').style.display = 'block';
-    document.getElementById('odjavi-se-li').style.display = 'block';
+    document.getElementById('moj-profil-li').style.display = 'list-item';
+    document.getElementById('odjavi-se-li').style.display = 'list-item';
     document.getElementById('prijavi-se-li').style.display = 'none';
     document.getElementById('postani-prodavac-li').style.display = 'none';
   } else {
     document.getElementById('moj-profil-li').style.display = 'none';
     document.getElementById('odjavi-se-li').style.display = 'none';
-    document.getElementById('prijavi-se-li').style.display = 'block';
-    document.getElementById('postani-prodavac-li').style.display = 'block';
+    document.getElementById('prijavi-se-li').style.display = 'list-item';
+    document.getElementById('postani-prodavac-li').style.display = 'list-item';
   }
 
   function odjaviSe() {
     localStorage.removeItem('trenutniKorisnik');
-    window.location.href = 'index.html';
+    window.location.href = '/';
   }
 </script>
-</header>
 
 <div class="container">
 
@@ -296,6 +293,7 @@
 </body>
 
 </html>
+
 
 
 
