--- a/proizvodjaci/blitva.html
+++ b/proizvodjaci/blitva.html
@@ -90,9 +90,9 @@
   <nav>
     <div class="logo">LokalniPlodovi</div>
     <ul>
-      <li><a href="/">Početna</a></li>
-      <li><a href="/prodavci">Svi prodavci</a></li>
-      <li><a href="/mapa">Mapa</a></li>
+      <li><a href="/index.html">Početna</a></li>
+      <li><a href="/prodavci.html">Svi prodavci</a></li>
+      <li><a href="/mapa">Mapa.html</a></li>
       <li><a href="/chat">Chat</a></li>
 
       <li id="moj-profil-li" style="display:none;">
@@ -103,7 +103,7 @@
       </li>
 
       <li id="prijavi-se-li">
-        <a href="/login">Prijavi se</a>
+        <a href="/login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
         <a href="/prijava-prodavca">Postani prodavac</a>
@@ -149,3 +149,4 @@
 
 </body>
 </html>
+
