--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <a href="login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="prijava-prodavca.html">Postani prodavac</a>
+        <a href="registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
@@ -295,6 +295,7 @@
 </body>
 
 </html>
+
 
 
 
