--- a/mapa.html
+++ b/mapa.html
@@ -47,7 +47,7 @@
         <a href="login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="registracija-prodavca.html">Postani prodavac</a>
+        <a href="registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
