--- a/zdravlje.html
+++ b/zdravlje.html
@@ -117,7 +117,7 @@
         <a href="login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="registracija-prodavca.html">Postani prodavac</a>
+        <a href="registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
@@ -167,6 +167,7 @@
 </body>
 
 </html>
+
 
 
 
