--- a/proizvodjaci/blitva.html
+++ b/proizvodjaci/blitva.html
@@ -90,7 +90,7 @@
   <nav>
     <div class="logo">LokalniPlodovi</div>
     <ul>
-      <li><a href="Lokalni-Plodovi/index.html">Početna</a></li>
+      <li><a href="index.html">Početna</a></li>
       <li><a href="prodavci.html">Svi prodavci</a></li>
       <li><a href="mapa.html">Mapa</a></li>
       <li><a href="chat">Chat</a></li>
@@ -149,6 +149,7 @@
 
 </body>
 </html>
+
 
 
 
