--- a/proizvodjaci/blitva.html
+++ b/proizvodjaci/blitva.html
@@ -91,12 +91,12 @@
     <div class="logo">LokalniPlodovi</div>
     <ul>
       <li><a href="../index.html">Početna</a></li>
-      <li><a href="../prodavci.html">Svi prodavci</a></li>
+      <li><a href="../Prodavci.html">Svi prodavci</a></li>
       <li><a href="../mapa.html">Mapa</a></li>
-      <li><a href="chat">../Chat.html</a></li>
+      <li><a href="../chat.html">Chat</a></li>
 
       <li id="moj-profil-li" style="display:none;">
-        <a href="../moj-profil">Moj profil</a>
+        <a href="../moj-profil.html">Moj profil</a>
       </li>
       <li id="odjavi-se-li" style="display:none;">
         <a href="#" onclick="odjaviSe()">Odjavi se</a>
@@ -112,21 +112,7 @@
   </nav>
 </header>
 
-<div class="container">
-  <h1>Proizvođači blitva</h1>
-  <p>Ova stranica je za sada prazna. Kasnije će ovde biti lista proizvođača blitva, njihovi profili, proizvodi i kontakt.</p>
-</div>
-
-<footer>
-  <div class="container">
-    <h2>LokalniPlodovi</h2>
-    <p>Prirodno • Sezonski • Direktno sa imanja Srbije</p>
-    <p style="margin-top:2rem; opacity:0.9;">© 2025 LokalniPlodovi • Sva prava zadržana</p>
-  </div>
-</footer>
-
 <script>
-  // Logika za prikazivanje/sakrivanje opcija
   const korisnik = localStorage.getItem('trenutniKorisnik');
 
   if (korisnik) {
@@ -143,12 +129,12 @@
 
   function odjaviSe() {
     localStorage.removeItem('trenutniKorisnik');
-    window.location.href = '/';
+    window.location.href = '../index.html';
   }
 </script>
-
 </body>
 </html>
+
 
 
 
