--- a/proizvodjaci/spanac.html
+++ b/proizvodjaci/spanac.html
@@ -90,28 +90,27 @@
   <nav>
     <div class="logo">LokalniPlodovi</div>
     <ul>
-      <li><a href="index.html">Početna</a></li>
-      <li><a href="prodavci.html">Svi prodavci</a></li>
-      <li><a href="mapa.html">Mapa</a></li>
-      <li><a href="#">Chat</a></li>
+      <li><a href="../index.html">Početna</a></li>
+      <li><a href="../Prodavci.html">Svi prodavci</a></li>
+      <li><a href="../mapa.html">Mapa</a></li>
+      <li><a href="../chat.html">Chat</a></li>
 
       <li id="moj-profil-li" style="display:none;">
-        <a href="moj-profil.html">Moj profil</a>
+        <a href="../moj-profil.html">Moj profil</a>
       </li>
       <li id="odjavi-se-li" style="display:none;">
         <a href="#" onclick="odjaviSe()">Odjavi se</a>
       </li>
 
       <li id="prijavi-se-li">
-        <a href="login.html">Prijavi se</a>
+        <a href="../login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="prijava-prodavca.html">Postani prodavac</a>
+        <a href="../registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
 </header>
-
 <div class="container">
   <h1 id="naslov">Proizvođači</h1>
   <p>Ova stranica je za sada prazna. Kasnije će ovde biti lista proizvođača ovog proizvoda, njihovi profili, proizvodi i kontakt.</p>
@@ -155,4 +154,5 @@
 </script>
 
 </body>
+
 </html>
