--- a/moj-profil.html
+++ b/moj-profil.html
@@ -1,4 +1,4 @@
-     <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="sr">
 <head>
   <meta charset="UTF-8" />
@@ -9,10 +9,9 @@
     :root {
       --zelena: #2e7d32;
       --zelena-svetla: #4caf50;
-      --zemlja: #5d4037;
       --svetlo: #f8f9f5;
-      --siva: #757575;
       --tamno: #333;
+      --siva: #666;
       --belo: #ffffff;
     }
 
@@ -59,113 +58,119 @@
       color: white;
       text-decoration: none;
       font-weight: 500;
-      transition: 0.2s;
-    }
-
-    nav a:hover { color: #c8e6c9; }
-
-    .profile-container {
-      max-width: 1000px;
-      margin: 3rem auto;
-      padding: 0 1.5rem;
     }
 
     .profile-card {
+      max-width: 1100px;
+      margin: 2rem auto;
       background: white;
       border-radius: 16px;
-      box-shadow: 0 8px 30px rgba(0,0,0,0.1);
+      box-shadow: 0 8px 30px rgba(0,0,0,0.12);
       overflow: hidden;
     }
 
     .profile-top {
-      background: linear-gradient(135deg, var(--zelena) 0%, var(--zelena-svetla) 100%);
-      padding: 3rem 2rem 1rem;
+      display: flex;
+      padding: 2.5rem 3rem;
+      gap: 3rem;
+      background: linear-gradient(135deg, var(--zelena), var(--zelena-svetla));
       color: white;
-      text-align: center;
       position: relative;
     }
 
-    .profile-avatar-wrapper {
-      position: absolute;
-      bottom: -60px;
-      left: 50%;
-      transform: translateX(-50%);
-      border: 6px solid white;
-      border-radius: 50%;
-      overflow: hidden;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
-    }
-
     .profile-avatar {
-      width: 140px;
-      height: 140px;
-      object-fit: cover;
+      width: 180px;
+      height: 180px;
       border-radius: 50%;
+      object-fit: cover;
+      border: 6px solid white;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+      flex-shrink: 0;
     }
 
-    .profile-info {
-      padding: 5rem 2rem 2rem;
-      text-align: center;
+    .profile-header-info {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 
     .profile-name {
-      font-size: 2.2rem;
-      margin: 0.5rem 0;
-      color: var(--tamno);
+      font-size: 2.4rem;
+      margin-bottom: 0.5rem;
     }
 
     .profile-bio {
-      font-size: 1.1rem;
-      color: var(--siva);
-      max-width: 600px;
-      margin: 1rem auto;
-      line-height: 1.6;
+      font-size: 1.15rem;
+      opacity: 0.95;
+      line-height: 1.5;
+      max-width: 700px;
+    }
+
+    .profile-edit-btn {
+      position: absolute;
+      top: 2rem;
+      right: 2rem;
+      background: white;
+      color: var(--zelena);
+      border: 2px solid white;
+      padding: 0.6rem 1.2rem;
+      border-radius: 50px;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: 0.2s;
+    }
+
+    .profile-edit-btn:hover {
+      background: var(--zelena);
+      color: white;
+    }
+
+    .profile-content {
+      padding: 2.5rem 3rem;
     }
 
     .profile-details {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 1.5rem;
-      margin-top: 2rem;
+      margin: 2rem 0;
     }
 
-    .detail-item {
-      background: var(--svetlo);
+    .detail-box {
+      background: #f8f9f5;
       padding: 1.2rem;
       border-radius: 12px;
       border: 1px solid #eee;
-      transition: 0.2s;
-    }
-
-    .detail-item:hover {
-      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
     }
 
     .detail-label {
       color: var(--zelena);
       font-weight: 600;
+      font-size: 0.95rem;
       margin-bottom: 0.4rem;
-      display: block;
     }
 
     .detail-value {
       font-size: 1.05rem;
     }
 
-    .buttons {
-      margin-top: 2.5rem;
+    .profile-actions {
       display: flex;
+      flex-direction: column;
       gap: 1rem;
-      justify-content: center;
+      max-width: 300px;
+      margin: 2rem auto 0;
     }
 
     .btn {
-      padding: 0.9rem 2rem;
+      padding: 1rem;
       border-radius: 50px;
-      font-size: 1.05rem;
+      font-size: 1.1rem;
       cursor: pointer;
       transition: 0.2s;
       border: none;
+      text-align: center;
     }
 
     .btn-primary {
@@ -175,29 +180,23 @@
 
     .btn-primary:hover { background: var(--zelena-svetla); }
 
-    .btn-outline {
+    .btn-secondary {
       background: transparent;
       border: 2px solid var(--zelena);
       color: var(--zelena);
     }
 
-    .btn-outline:hover {
+    .btn-secondary:hover {
       background: var(--zelena);
       color: white;
     }
 
     footer {
-      background: var(--zemlja);
+      background: var(--tamno);
       color: white;
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 2rem;
       margin-top: auto;
-    }
-
-    @media (max-width: 768px) {
-      .profile-top { padding: 4rem 1.5rem 1rem; }
-      .profile-avatar-wrapper { bottom: -50px; }
-      .profile-avatar { width: 120px; height: 120px; }
     }
   </style>
 </head>
@@ -207,67 +206,61 @@
   <nav>
     <div class="logo">LokalniPlodovi</div>
     <ul>
-      <li><a href="/">Početna</a></li>
-      <li><a href="/prodavci">Svi prodavci</a></li>
-      <li><a href="/mapa">Mapa</a></li>
-      <li><a href="/chat">Chat</a></li>
-
-      <li id="moj-profil-li" style="display:none;">
-        <a href="/moj-profil">Moj profil</a>
-      </li>
-      <li id="odjavi-se-li" style="display:none;">
-        <a href="#" onclick="odjaviSe()">Odjavi se</a>
-      </li>
-
-      <li id="prijavi-se-li">
-        <a href="/login">Prijavi se</a>
-      </li>
-      <li id="postani-prodavac-li">
-        <a href="/prijava-prodavca">Postani prodavac</a>
-      </li>
+      <li><a href="index.html">Početna</a></li>
+      <li><a href="prodavci.html">Svi prodavci</a></li>
+      <li><a href="mapa.html">Mapa</a></li>
+      <li><a href="chat.html">Chat</a></li>
+      <li id="moj-profil-li"><a href="/moj-profil">Moj profil</a></li>
+      <li id="odjavi-se-li"><a href="#" onclick="odjaviSe()">Odjavi se</a></li>
+      <li id="prijavi-se-li"><a href="/login">Prijavi se</a></li>
+      <li id="postani-prodavac-li"><a href="/prijava-prodavca">Postani prodavac</a></li>
     </ul>
   </nav>
 </header>
 
-<div class="profile-header">
-  <div class="profile-avatar-wrapper">
-    <img src="https://via.placeholder.com/140?text=Boris" alt="Profilna slika" class="profile-avatar" id="profile-avatar">
+<div class="profile-card">
+  <div class="profile-top">
+    <img src="https://via.placeholder.com/180?text=Boris" alt="Profilna slika" class="profile-avatar" id="profile-avatar">
+
+    <div class="profile-header-info">
+      <h1 class="profile-name" id="profile-name">Učitavanje...</h1>
+      <p class="profile-bio" id="profile-bio">Opis domaćinstva...</p>
+
+      <button class="profile-edit-btn" onclick="izmeniProfil()">Izmeni profil</button>
+    </div>
   </div>
 
-  <div class="profile-info">
-    <h1 class="profile-name" id="profile-name">Učitavanje...</h1>
-    <p class="profile-bio" id="profile-bio">Opis domaćinstva...</p>
-
+  <div class="profile-content">
     <div class="profile-details">
-      <div class="detail-item">
-        <span class="detail-label">Email</span>
-        <span class="detail-value" id="email">Učitavanje...</span>
+      <div class="detail-box">
+        <div class="detail-label">Email</div>
+        <div id="email">Učitavanje...</div>
       </div>
-      <div class="detail-item">
-        <span class="detail-label">Telefon</span>
-        <span class="detail-value" id="telefon">Učitavanje...</span>
+      <div class="detail-box">
+        <div class="detail-label">Telefon</div>
+        <div id="telefon">Učitavanje...</div>
       </div>
-      <div class="detail-item">
-        <span class="detail-label">Lokacija</span>
-        <span class="detail-value" id="lokacija">Učitavanje...</span>
+      <div class="detail-box">
+        <div class="detail-label">Lokacija</div>
+        <div id="lokacija">Učitavanje...</div>
       </div>
-      <div class="detail-item">
-        <span class="detail-label">Niše</span>
-        <span class="detail-value" id="nise">Učitavanje...</span>
+      <div class="detail-box">
+        <div class="detail-label">Niše</div>
+        <div id="nise">Učitavanje...</div>
       </div>
-      <div class="detail-item">
-        <span class="detail-label">Opis</span>
-        <span class="detail-value" id="opis">Učitavanje...</span>
+      <div class="detail-box">
+        <div class="detail-label">Opis</div>
+        <div id="opis">Učitavanje...</div>
       </div>
-      <div class="detail-item">
-        <span class="detail-label">Registrovan</span>
-        <span class="detail-value" id="registeredAt">Učitavanje...</span>
+      <div class="detail-box">
+        <div class="detail-label">Registrovan</div>
+        <div id="registeredAt">Učitavanje...</div>
       </div>
     </div>
 
-    <div class="buttons">
-      <button class="btn btn-primary" onclick="odjaviSe()">Odjavi se</button>
-      <button class="btn btn-outline" onclick="alert('Izmena profila uskoro')">Izmeni profil</button>
+    <div class="profile-actions">
+      <button class="btn btn-primary" onclick="objaviNovost()">Objavi novost</button>
+      <button class="btn btn-secondary" onclick="dodajProizvod()">Dodaj proizvod</button>
     </div>
   </div>
 </div>
@@ -281,14 +274,6 @@
 
   async function ucitajProfil() {
     const token = localStorage.getItem('token');
-    const profilName = document.getElementById('profile-name');
-    const profilBio = document.getElementById('profile-bio');
-    const emailEl = document.getElementById('email');
-    const telefonEl = document.getElementById('telefon');
-    const lokacijaEl = document.getElementById('lokacija');
-    const niseEl = document.getElementById('nise');
-    const opisEl = document.getElementById('opis');
-    const registeredAtEl = document.getElementById('registeredAt');
 
     // Ažuriraj header
     if (token) {
@@ -296,55 +281,52 @@
       document.getElementById('odjavi-se-li').style.display = 'list-item';
       document.getElementById('prijavi-se-li').style.display = 'none';
       document.getElementById('postani-prodavac-li').style.display = 'none';
-    } else {
-      document.getElementById('moj-profil-li').style.display = 'none';
-      document.getElementById('odjavi-se-li').style.display = 'none';
-      document.getElementById('prijavi-se-li').style.display = 'list-item';
-      document.getElementById('postani-prodavac-li').style.display = 'list-item';
     }
 
     if (!token) {
-      profilName.textContent = 'Niste ulogovani';
-      profilBio.textContent = 'Registrujte se ili prijavite.';
+      document.getElementById('profile-name').textContent = 'Niste ulogovani';
       return;
     }
 
     try {
       const response = await fetch(`${backendUrl}/profile`, {
         method: 'GET',
-        headers: {
-          'Authorization': `Bearer ${token}`,
-          'Content-Type': 'application/json'
-        }
+        headers: { 'Authorization': `Bearer ${token}` }
       });
-
-      if (!response.ok) {
-        throw new Error(`Greška ${response.status}`);
-      }
 
       const data = await response.json();
 
-      profilName.textContent = data.ime || 'Korisnik';
-      profilBio.textContent = data.opis || 'Opis domaćinstva...';
-      emailEl.textContent = data.email || 'N/A';
-      telefonEl.textContent = data.telefon || 'Nije navedeno';
-      lokacijaEl.textContent = data.lokacija || 'Nije navedeno';
-      niseEl.textContent = data.nise ? data.nise.join(', ') : 'Nijedna';
-      opisEl.textContent = data.opis || 'Nema opisa';
-      registeredAtEl.textContent = data.registeredAt ? new Date(data.registeredAt).toLocaleString() : 'N/A';
+      document.getElementById('profile-name').textContent = data.ime || 'Korisnik';
+      document.getElementById('profile-bio').textContent = data.opis || 'Nema opisa';
+      document.getElementById('email').textContent = data.email || 'N/A';
+      document.getElementById('telefon').textContent = data.telefon || 'Nije navedeno';
+      document.getElementById('lokacija').textContent = data.lokacija || 'Nije navedeno';
+      document.getElementById('nise').textContent = data.nise ? data.nise.join(', ') : 'Nijedna';
+      document.getElementById('opis').textContent = data.opis || 'Nema opisa';
+      document.getElementById('registeredAt').textContent = data.registeredAt ? new Date(data.registeredAt).toLocaleString() : 'N/A';
 
-      // Profilna slika (za sada placeholder – kasnije upload)
-      document.getElementById('profile-avatar').src = data.slika || 'https://via.placeholder.com/140?text=' + encodeURIComponent(data.ime?.charAt(0) || 'B');
+      document.getElementById('profile-avatar').src = data.slika || 'https://via.placeholder.com/180?text=' + (data.ime ? data.ime[0] : 'B');
     } catch (err) {
-      console.error('Greška pri učitavanju profila:', err);
-      profilName.textContent = 'Greška';
-      profilBio.textContent = 'Ne mogu da učitam podatke. Probajte ponovo.';
+      console.error(err);
+      document.getElementById('profile-name').textContent = 'Greška pri učitavanju';
     }
   }
 
   function odjaviSe() {
     localStorage.removeItem('token');
     window.location.href = '/';
+  }
+
+  function objaviNovost() {
+    alert('Forma za objavu novosti uskoro – možeš da napišeš šta ima novo kod tebe');
+  }
+
+  function dodajProizvod() {
+    alert('Forma za dodavanje proizvoda uskoro');
+  }
+
+  function izmeniProfil() {
+    alert('Izmena profila uskoro');
   }
 
   document.addEventListener('DOMContentLoaded', ucitajProfil);
